Add in first working register prototype: github, re-organize structure

--- a/ZenID Extension/background.html
+++ b/ZenID Extension/background.html
@@ -13,5 +13,6 @@
 
 <!-- OUR CODE -->
 <script type="text/javascript" src="background.js"></script>
+<script type="text/javascript" src="background_methods.js"></script>
 
 </html>
