Adding password overlay which shows the logo of Octokey

--- a/ZenID Extension/overlay_complete.html
+++ b/ZenID Extension/overlay_complete.html
@@ -59,8 +59,8 @@
     </style>
 </head>
 <body>
-<!--<img id="loader" src="resources/loader2.gif"/>-->
-<img id="loader" src="resources/logo_mono.png"/>
+<img id="loader" src="resources/loader_dark.gif"/>
+<!--<img id="loader" src="resources/logo_mono.png"/>-->
 <p id="loading">安全登录中</p>
 </body>
 </html>
