--- a/ZenID Extension/popup.html
+++ b/ZenID Extension/popup.html
@@ -33,7 +33,7 @@
 <body>
 <div id="status"></div>
 <img id="image-result" hidden>
-Hello! 你好!
+Hello from Octokey! 章鱼钥匙: hey 你好!
 </body>
 </html>
 
