--- a/ZenID Extension/popup.html
+++ b/ZenID Extension/popup.html
@@ -9,10 +9,11 @@
     <meta charset="UTF-8">
     <title>Getting Started Extension's Popup</title>
     <style>
-        /*body {*/
+        body {
             /*font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;*/
             /*font-size: 100%;*/
-        /*}*/
+            width:200px;
+        }
         #status {
             /* avoid an excessively wide status text */
             white-space: pre;
@@ -33,7 +34,7 @@
 <body>
 <div id="status"></div>
 <img id="image-result" hidden>
-Hello from Octokey! 章鱼钥匙: hey 你好!
+<p>章鱼钥匙, 国际顶尖加密技术AES256, 提供真正靠谱的安全登录。</p>
 </body>
 </html>
 
