Adding gulp to support extension live watch && auto minify and uglify scripts

--- a/app/overlay.html
+++ b/app/overlay.html
@@ -71,6 +71,6 @@
     <p id="scriptCancel">取消</p>
 </a>
 
-<script type="text/javascript" src="cancelBtn.js" ></script>
+<script type="text/javascript" src="scripts/cancelBtn.js" ></script>
 </body>
 </html>
