--- a/app/popup.html
+++ b/app/popup.html
@@ -29,7 +29,7 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="popup.js"></script>
+    <script src="scripts/popup.js"></script>
 </head>
 <body>
 <div id="status"></div>
