Fix the bug that causes overlay not showing up

--- a/app/overlay.html
+++ b/app/overlay.html
@@ -44,28 +44,10 @@
             vertical-align: middle;
         }
 
-        /*<!--html, body, iframe, h2 {-->*/
-        /*<!--margin: 0;-->*/
-        /*<!--border: 0;-->*/
-        /*<!--padding: 0;-->*/
-        /*<!--display: block;-->*/
-        /*<!--width: 100%;-->*/
-        /*<!--height: 100%;-->*/
-        /*<!--!*background: white;*!-->*/
-        /*<!--color: black;-->*/
-        /*<!--}-->*/
-        /*<!--h2 {-->*/
-        /*<!--height: 50px;-->*/
-        /*<!--font-size: 20px;-->*/
-        /*<!--}-->*/
-        /*<!--iframe {-->*/
-        /*<!--height: calc(100vh - 50px);-->*/
-        /*<!--}-->*/
     </style>
 </head>
 <body>
-<!--<img id="loader" src="resources/loader2.gif"/>-->
-<img id="loader" src="resources/logo_mono.png"/>
+<img id="loader" src="images/logo_mono.png"/>
 <p id="loading">安全登录中</p>
 <a href="#">
     <p id="scriptCancel">取消</p>
