--- a/app/popup.html
+++ b/app/popup.html
@@ -34,7 +34,7 @@
 <body>
 <div id="status"></div>
 <img id="image-result" hidden>
-<p>章鱼钥匙, 国际顶尖加密技术AES256, 提供真正靠谱的安全登录。</p>
+<p>O钥匙, 国际顶尖加密技术AES256, 提供真正靠谱的安全登录。</p>
 </body>
 </html>
 
