--- a/app/overlay_captcha.html
+++ b/app/overlay_captcha.html
@@ -39,28 +39,10 @@
 
         }
 
-        /*<!--html, body, iframe, h2 {-->*/
-        /*<!--margin: 0;-->*/
-        /*<!--border: 0;-->*/
-        /*<!--padding: 0;-->*/
-        /*<!--display: block;-->*/
-        /*<!--width: 100%;-->*/
-        /*<!--height: 100%;-->*/
-        /*<!--!*background: white;*!-->*/
-        /*<!--color: black;-->*/
-        /*<!--}-->*/
-        /*<!--h2 {-->*/
-        /*<!--height: 50px;-->*/
-        /*<!--font-size: 20px;-->*/
-        /*<!--}-->*/
-        /*<!--iframe {-->*/
-        /*<!--height: calc(100vh - 50px);-->*/
-        /*<!--}-->*/
     </style>
 </head>
 <body>
-<img id="loader" src="resources/loader_captcha.png"/>
-<!--<img id="loader" src="resources/loader_dark.gif"/>-->
+<img id="loader" src="images/loader_captcha.png"/>
 <p id="loading">请完成验证</p>
 </body>
 </html>
