Updating browser action button

--- a/app/popup.html
+++ b/app/popup.html
@@ -34,7 +34,9 @@
 <body>
 <div id="status"></div>
 <img id="image-result" hidden>
-<p>O钥匙, 国际顶尖加密技术AES256, 提供真正靠谱的安全登录。</p>
+<p>配合O钥匙官网使用</p>
+<a href="https://oyaoshi.com" target="_blank">https://oyaoshi.com</a>
+<p>O钥匙, 国际顶尖加密技术AES256, 提供真正可靠的安全登录。</p>
 </body>
 </html>
 
