增加chrome版本兼容度, 从31.x 开始 #3, UI changes, transform 添加msTransform和webKitTransform

--- a/app/overlay.html
+++ b/app/overlay.html
@@ -26,7 +26,8 @@
             width: 100%;
             text-align: center;
             top: 50%;
-            -ms-transform: translateY(-50%);
+            -webkit-transform: translateY(60px);
+            -ms-transform: translateY(60px);
             transform: translateY(60px);
             vertical-align: middle;
         }
@@ -38,9 +39,10 @@
             position: fixed;
             width: 100%;
             text-align: center;
-            top: 70%;
-            -ms-transform: translateY(-50%);
-            transform: translateY(60px);
+            top: 50%;
+            -webkit-transform: translateY(120px);
+            -ms-transform: translateY(120px);
+            transform: translateY(120px);
             vertical-align: middle;
         }
 
