--- a/app/overlay_complete.html
+++ b/app/overlay_complete.html
@@ -31,8 +31,8 @@
             /* top: 100px; */
             /* position: relative !important; */
             top: 50%;
-            /* -webkit-transform: translateY(-50%); */
-            -ms-transform: translateY(-50%);
+            -webkit-transform: translateY(60px);
+            -ms-transform: translateY(60px);
             transform: translateY(60px);
             /* display: table; */
             vertical-align: middle;
