refactor: change from oyaoshi.com to octokeyteam.com

--- a/app/popup.html
+++ b/app/popup.html
@@ -35,7 +35,7 @@
 <div id="status"></div>
 <img id="image-result" hidden>
 <p>配合O钥匙官网使用</p>
-<a href="https://oyaoshi.com" target="_blank">https://oyaoshi.com</a>
+<a href="https://octokeyteam.com" target="_blank">https://octokeyteam.com</a>
 <p>O钥匙, 国际顶尖加密技术AES256, 提供真正可靠的安全登录。</p>
 </body>
 </html>
