--- a/app/redirect.html
+++ b/app/redirect.html
@@ -1,3 +1,3 @@
 <head>
-    <meta http-equiv="refresh" content="0;URL=https://oyaoshi.com">
+    <meta http-equiv="refresh" content="0;URL=https://octokeyteam.com">
 </head>
